# goit-pythonweb-hw-01

./: README.md  demo_task2.py  logger.py  main.py  pyproject.toml  task1.py  task2.py
